Added icon and about form.

--- a/MiiCloner/AboutForm.resx
+++ b/MiiCloner/AboutForm.resx
@@ -117,6 +117,30 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="lblAbout.Text" xml:space="preserve">
+    <value>This application lets you clone Mii files for use in various Wii games.
+
+You can edit some of the Mii's information before cloning by hitting the 'Edit' button.
+
+Hitting the 'Export Clone' button will then create a new Mii file with the edited information.
+
+There is also a button that allows you to generate 26 Miis at once, ready for Mario Kart Wii's
+Mogi lounge.
+Each of these Miis will be created with a different tag from A-Z.
+Since the tag is prefixed onto the Mii name along with a space,the Mii name must be 8
+characters or shorter to be able to generate the Mogi Miis.
+
+Once cloned, you can add these Miis back to your Mii Channel using the HBC app 
+
+
+Similarly, if you're unsure of how to get the .mii files you'd like to clone, you can use the
+HBC app 
+
+Thanks for checking out Mii Cloner!
+
+Created by goninty, August 2020.
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
