Fixed one typo'd letter.

--- a/MiiCloner/AboutForm.resx
+++ b/MiiCloner/AboutForm.resx
@@ -137,7 +137,7 @@ Similarly, if you're unsure of how to get the .mii files you'd like to clone, yo
 HBC app 
 
 An application that can both extract and install Miis is 
-However, be sure to save your cloned miis as .miigx files if you intend to use it.
+However, be sure to save your cloned Miis as .miigx files if you intend to use it.
 
 Thanks for checking out Mii Cloner!
 
